# metanotes-legacy

./: .bazelrc  .dockerignore  .eslintrc.js  .eslintrc.scribbles.js  .gitignore  BUILD.bazel  Dockerfile  Procfile  README.md  WORKSPACE  WORKSPACE.bazel  babel.config.json  docker-compose.yaml  ecosystem.config.js  jest.ts.config.js  metanotes.code-workspace  metro.config.js  package.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.jest.json  tsconfig.json  tsconfig.scribble.json
.devcontainer/: Dockerfile  (+1 more)
bazel/: ui.bzl  (+5 more)
src/backend/: BUILD.bazel  babel.config.js  error.ts  index.ts  monopack.config.js  node_requirejs.js  package.json  rollup.config.js  schema.ts  server.ts  store.test.ts  store.ts
src/common/api/: BUILD.bazel  api.proto  api_grpc_pb.d.ts  api_grpc_pb.js  api_pb.d.ts  api_pb.js
src/common/buildinfo/: BUILD.bazel
src/envoy/: BUILD.bazel  config-dev.yaml
src/frontend/app/: BUILD.bazel  index.tsx  preloader.ts  wdyr.ts
src/frontend/app/components/: ActionsScribble.tsx  BUILD.bazel  EmptyEditor.tsx  Root.tsx  ScribbleContainer.tsx  ScribbleEditorController.tsx  ScribbleHeader.tsx  ScribblesContainer.tsx  ScribblesPicker.tsx  Separator.tsx  SpreadStore.integration.test.tsx  SpreadStore.tsx  StatusBar.tsx  Store.tsx  Toolbar.tsx  colors.ts
src/frontend/app/components/__mocks__/: ScribbleEditorController.tsx
src/frontend/app/ui/: BUILD.bazel  index.tpl.tsx  index.tsx  paper.tsx  ui-kitten.tsx  ui_kitten.tsx
src/frontend/filter/: BUILD.bazel  eval.ts  index.ts  parser.test.ts  parser.ts  pipeline.test.tsx
src/frontend/metamarkdown/: BUILD.bazel
src/frontend/metamarkdown/ast/: compiler.ts  components.ts  concat_transformer.ts  emphasis_transformer.test.ts  emphasis_transformer.ts  index.ts
src/frontend/metamarkdown/parser/: BUILD.bazel  commonmark-spec.d.ts  parser-inline.test.ts  parser.test.ts  parser.ts  test-helpers.ts  types.ts  widget.ts
src/frontend/metamarkdown/parser/mocks/: BUILD.bazel  store.ts
src/frontend/metamarkdown/renderer/: BUILD.bazel  compiler.ts  components.ts  react_native_components.tsx  renderer.test.tsx  renderer.ts
src/frontend/scribbles/: BUILD.bazel  tsconfig.json
src/frontend/scribbles/editor/application/: vnd.metanotes.component-jsmodule.metanotes.jsx
src/frontend/scribbles/editor/image/: jpeg.metanotes.jsx
src/frontend/scribbles/editor/text/: markdown.metanotes.jsx
src/frontend/scribbles/filter/: get-scribbles.ts  with-title.ts
src/frontend/scribbles/markdown/: emphasis.tsx  link.tsx  paragraph.tsx  strong.tsx  text.tsx
src/frontend/scribbles/parser/: atx_heading.metanotes.js  atx_heading.metanotes.ts  atx_inline.metanotes.js  atx_marker.metanotes.js  atx_start.metanotes.js  blank_line.metanotes.js  block.metanotes.js  block_content.metanotes.js  block_content.metanotes.ts  block_self_closing_tag.ts  block_tag.ts  debug.md  document.metanotes.js  document_content.metanotes.js  document_content.ts  emphasis.metanotes.js  emphasis.ts  emphasis_star.metanotes.js  emphasis_underline.metanotes.js  endline.metanotes.js  escaped_char.metanotes.js  escaped_char.metanotes.ts  fenced_code_block.metanotes.js  fenced_code_block.ts  heading.metanotes.js  indent_same.metanotes.js  indent_same.ts  indented_block_content.metanotes.js  indented_block_content.ts  inline.metanotes.js  inline_echo_tag.ts  inlines.metanotes.js  line.metanotes.js  line_break.metanotes.js  link.metanotes.js  link_destination.metanotes.js  link_title.metanotes.js  list.ts  list_item.metanotes.js  list_item.ts  (+36 more)
src/frontend/scribbles/parser/helpers/: balance_emphasis_children.metanotes.js  collapse_text.metanotes.ts  finalize_paragraphs.metanotes.js  finalize_paragraphs.ts
src/frontend/scribbles/renderer/image/: jpeg.metanotes.jsx  png.metanotes.jsx
src/frontend/scribbles/renderer/text/: markdown.metanotes.jsx
src/frontend/scribbles/routes/: single-scribble.metanotes.jsx
src/frontend/scribbles/ui/: parser-eval.metanotes.jsx  parser-test.metanotes.jsx  scribble-attributes-editor.metanotes.jsx  scribble-card-actions.metanotes.jsx  scribble-card-header.metanotes.jsx  scribble-container.metanotes.jsx  scribble-content-type-editor.metanotes.jsx  single-scribble-layout.metanotes.jsx  view-scribble-card.metanotes.jsx
src/frontend/scribbles/widgets/: echo.tsx  for.tsx  query.tsx  textinput.tsx
src/frontend/store/: BUILD.bazel  context.ts  fetch_status.ts  index.ts  jest.bzl  mock_store.ts  provider.tsx  store.integration.test.tsx  store.test.ts  store.ts  tagging.ts
src/frontend/store/client/: BUILD.bazel  index.ts  metanotes-server.ts
src/frontend/store/context/: BUILD.bazel  context.ts  use_context.ts
src/frontend/store/eval_store/: BUILD.bazel  context.ts  eval_store.ts  provider.tsx  use_context.ts
src/frontend/store/interface/: BUILD.bazel  computed_metadata.ts  core_scribble.ts  metadata.ts  scribble.ts  store.ts  version.ts
src/frontend/store/scribble/: BUILD.bazel  computed_metadata.ts  ids.ts  metadata.ts  scribble.test.ts  scribble.ts  scribble.tsx  to_markdown.tsx  version.ts
src/frontend/store/scribbles_store/: BUILD.bazel  mock_store.ts  provider.tsx  scribbles_store.ts  store.integration.test.tsx  store.test.ts  store.ts  tagging.ts  upload_status.ts  use_context.ts
src/frontend/store/spread_store/: BUILD.bazel  context.ts  provider.tsx  spread_store.ts  use_context.ts
src/frontend/web/: App.tsx  BUILD.bazel  CoreEvents.tsx  ErrorBoundary.tsx  ScribbleResolver.tsx  buildinfo.ts  index-dev.html  index.html  index.tsx  react-app-env.d.ts  react-error-overlay.d.ts  reportWebVitals.ts  rollup.config.js  setupTests.ts  wdyr.ts  webpack.config.js
src/grpc-web-proxy/devproxy/: BUILD.bazel  fetch.sh
src/grpc-web-proxy/envoy/: BUILD.bazel
src/grpc_web_proxy/devproxy/: BUILD.bazel  grpcwebproxy.BUILD
src/mobile/: App.tsx  BUILD.bazel  bazel-build.sh  metro.config.js  package.json
src/mobile/android/app/: build.gradle
tools/: BUILD.bazel  interface_extractor.ts  scribblegen.ts  status.sh  ts-resolver.js
tools/rollup-worker/: BUILD.bazel  rollup-worker.js
tools/rollup_worker/: BUILD.bazel  LICENSE
(+91 files in other folders)
