load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "scribblegen_lib",
    srcs = ["scribblegen.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "scribblegen",
    data = [
        ":scribblegen_lib",
    ],
    entry_point = ":scribblegen.ts",
)
