load("//bazel:ts_project.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "scribblegen_lib",
    srcs = ["scribblegen.ts"],
    deps = [
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "scribblegen",
    data = [
        ":scribblegen_lib",
    ],
    entry_point = ":scribblegen.ts",
)

ts_project(
    name = "interface_extractor_lib",
    srcs = ["interface_extractor.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//commander",
        "@npm//ts-morph",
    ],
)

nodejs_binary(
    name = "interface_extractor",
    data = [
        ":interface_extractor_lib",
    ],
    entry_point = ":interface_extractor.ts",
)
