load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/terser:index.bzl", "terser_minified")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "backend_lib",
    srcs = glob(["*.ts"]),
    declaration = True,
    tsc = "@npm_backend//typescript/bin:tsc",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/common/api:api_grpc_lib",
        "@npm_backend//@grpc/grpc-js",
        "@npm_backend//@types",
        "@npm_backend//google-protobuf",
        "@npm_backend//sqlite",
        "@npm_backend//sqlite3",
    ],
)

nodejs_binary(
    name = "backend",
    data = [
        ":backend_lib",
    ],
    entry_point = ":index.ts",
)

rollup_bundle(
    name = "rollup",
    config_file = "rollup.config.js",
    entry_point = ":index.ts",
    format = "cjs",
    rollup_bin = "@npm_backend//rollup/bin:rollup",
    deps = [
        ":backend_lib",
        "@npm_backend//@rollup/plugin-commonjs",
        "@npm_backend//@rollup/plugin-node-resolve",
    ],
)

terser_minified(
    name = "rollup.minified",
    src = ":rollup",
    sourcemap = False,
)
