# load("@npm//react-native:index.bzl", "react-native")

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "npm_package_bin")

sh_binary(
    name = "bazelbuild",
    srcs = ["bazel-build.sh"],
)

genrule(
    name = "mobile.android",
    srcs = glob([
        "*/**",
        "*.json",
        "*.js",
    ]) + ["//:package.json"],
    outs = ["concatenated.txt"],
    cmd = "$(location :bazelbuild) $(location @npm//react-native/bin:react-native) $@",
    tools = [
        ":bazelbuild",
        "@npm//react-native/bin:react-native",
        # ":rncli",
    ],
)

nodejs_binary(
    name = "rncli",
    data = ["@npm//:node_modules"] + glob([
        "*/**",
        "*.json",
        "*.js",
    ]),
    entry_point = "@npm//:node_modules/react-native/cli.js",
    templated_args = [
        "bundle",
    ],
)

npm_package_bin(
    name = "metro",
    outs = ["index.android.js"],
    args = [
        "bundle",
        "--entry-file",
        "./src/mobile/index.js",
        "--platform",
        "android",
        "--dev",
        "true",
        "--bundle-output",
        "$@",
        "--config",
        # "./src/mobile/metro.config.js",
        "./metro.config.js",
    ],
    data = glob([
        "*/**",
        "*.json",
        "*.js",
        "*.tsx",
    ]) + [
        "//:package.json", # NB: react-native needs to see the package.json or it will be detached
                           # s.a. https://sourcegraph.com/github.com/react-native-community/cli/-/blob/packages/cli/src/index.ts#L226
        "//:metro.config.js",  # if we move this it will lose track of ../../node_modules. WAT?
        "//:tsconfig.json",
    ] + [
        "@npm//metro-react-native-babel-preset",
        "@npm//:node_modules",  # TODO: trim down to the needed modules
    ] + [
        "//src/test",
    ],
    package = "react-native",
    package_bin = "react-native",
    # chdir = "src/mobile",  # NB: doesn't seem to be needed? breaks bazel-out path
)
