load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_library", "js_grpc_web_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

js_grpc_node_library(
    name = "api_node",
    protos = [":api_proto"],
)

js_grpc_web_library(
    name = "api_web",
    protos = [":api_proto"],
)
