load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "app",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "**/*.test.ts",
            "**/*.test.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/common/buildinfo",
        "//src/frontend/app/components",
        "@npm//@types/react",
        "@npm//@types/react-native",
        "@npm//@welldone-software/why-did-you-render",
        "@npm//react",
        "@npm//react-native",
        "@npm//web-vitals",
    ],
)
