load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "filter",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/parsimmon",
        "@npm//parsimmon",
    ],
)

ts_jest_test(
    name = "filter_test",
    srcs = glob(["**/*.test.ts"]),
    deps = [
        ":filter",
    ],
)
