load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "filter",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/store/interface",
        "@npm//@types/parsimmon",
        "@npm//parsimmon",
    ],
)

ts_jest_test(
    name = "filter_test",
    srcs = glob([
        "*.test.ts",
        "*.test.tsx",
    ]),
    deps = [
        ":filter",
        "//src/frontend/metamarkdown/parser/mocks:mock_store",
        "//src/frontend/store/scribble/eval:context",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//mobx-react-lite",
        "@npm//react",
        "@npm//react-dom",
    ],
)
