load("//bazel:jest.bzl", "ts_jest_test")
load("//bazel:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "filter",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    deps = [
        "@npm//@types/parsimmon",
        "@npm//parsimmon",
    ],
)

ts_jest_test(
    name = "filter_test",
    srcs = glob([
        "*.test.ts",
        "*.test.tsx",
    ]),
    deps = [
        ":filter",
        "//src/frontend/store/eval_store",
        "//src/frontend/store/scribbles_store:mock_store",
        "//src/frontend/store/scribbles_store:provider",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//mobx-react-lite",
        "@npm//react",
        "@npm//react-dom",
    ],
)
