load("//bazel:jest.bzl", "ts_jest_test")
load("//bazel:typescript.bzl", "ts_frontend_project")

package(default_visibility = ["//visibility:public"])

ts_frontend_project(
    name = "metamarkdown",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.test.ts",
            "parser/test-helpers.ts",
        ],
    ),
    deps = [
        "//src/frontend/store",
        "@npm_frontend//parsimmon",
        "@npm_frontend//ts-mdast",
        "@npm_frontend//unified",
        "@npm_frontend//vfile",
    ],
)

ts_jest_test(
    name = "metamarkdown_test",
    srcs = glob(["**/*.test.ts"]) + [
        "mdast-util-compact.d.ts",
        "commonmark-spec.d.ts",
        "test-helpers.ts",
    ],
    link_workspace_root = True,
    tsc = "@npm_frontend//typescript/bin:tsc",
    deps = [
        ":metamarkdown",
        "//src/frontend/scribbles",
        "@npm_frontend//commonmark-spec",
        "@npm_frontend//mdast-util-compact",
        "@npm_frontend//remark-html",
    ],
)
