load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("//bazel:scribbles.bzl", "scribble_gen_ts", "scribble_gen_index")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

scribble_gen_ts(
    name = "scribbles_ts",
    srcs = glob(["**/*.metanotes.js", "**/*.metanotes.jsx"]),
)

scribble_gen_index(
    name = "index",
    deps = [":scribbles_ts"]
)

ts_library(
    name = "scribbles_lib_ts",
    srcs = [
        ":index",
        ":scribbles_ts",
    ],
)

js_library(
    name = "scribbles",
    srcs = [
        ":scribbles_lib_ts",
    ],
)
