load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "store",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/store/client",
        "//src/frontend/store/interface",
        "//src/frontend/store/scribble",
        "@npm//@types/react",
        "@npm//mobx",
        "@npm//mobx-utils",
        "@npm//react",
    ],
)

ts_jest_test(
    name = "store_test",
    srcs = glob(["*.test.ts"]),
    deps = [
        ":store",
        "//src/common/api:api_grpc_web_lib",
        "@npm//google-protobuf",
    ],
)
