load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

package_group(
    name = "store_pkg",
    packages = [
        "//src/frontend/store",
    ],
)

ts_project(
    name = "store",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "**/*.test.ts",
            "**/*.test.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/scribbles",
        "//src/frontend/store/client",
        "//src/frontend/store/context",
        "//src/frontend/store/interface",
        "//src/frontend/store/scribble",
        "@npm//@types/react",
        "@npm//mobx",
        "@npm//mobx-utils",
        "@npm//react",
    ],
)

ts_jest_test(
    name = "store_test",
    srcs = glob([
        "*.test.ts",
        "*.test.tsx",
    ]),
    deps = [
        ":store",
        "//src/common/api:api_web",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//google-protobuf",
        "@npm//mobx-react-lite",
        "@npm//react-dom",
    ],
)
